1. Fix bugs caused by Java 7u21. We need to use processBuilder to start goose with jnlp. 2. Add function to GooseWorkflowManager.java to get the GaggleData. 3. Rewrite the savestate logic. For firefox, we serialize GaggleData to seperate .dat files. These files are sent together with the top level .gst file to the server.